# MobileFineTuner

./: .gitignore  README.md  download_gemma_1b.py  download_gpt2_medium.py  measure_rss.sh  organize_files.sh  plot_loss_curve.py  run_gemma_1b_short.sh  run_gemma_270m_grad_accum_test.sh  run_gemma_270m_grad_accum_test_v2.sh  run_gpt2_medium_lora.sh  run_pytorch_after_cpp.sh  run_sequential_alignment.sh
On-Device_Finetune/gemma_finetune/: README.md  build_lora.sh  export_weights.py  gemma_lora_finetune.cpp  gemma_tokenizer.h  prepare_wikitext.py  requirements.txt
On-Device_Finetune/gpt2_finetune/: .gitignore  CMakeLists.txt  README.md  build_gpt2_lora.sh  export_weights.py  gpt2_lora_finetune.cpp  prepare_wikitext.py  requirements.txt  wikitext_dataset.py
On-Device_Finetune/operators/: .gitignore  CMakeLists.txt  README.md  build_operators.sh  config.h  memory.h  nn.h  operators.h  test_basic  test_check  test_enhanced  test_fusion  transformer.h  verify_integration.sh
On-Device_Finetune/operators/activations/: activation_compressor.h  activation_deepspeed_optimizations.h  activation_partitioning.h  activation_storage.h  activation_system_integration.h  deepspeed_checkpoint_integration.cpp  deepspeed_checkpoint_integration.h  mobile_activation_manager.cpp  mobile_activation_manager.h  mobile_efficient_attention.h
On-Device_Finetune/operators/core/: autograd_engine.cpp  autograd_engine.h  backward_functions.cpp  backward_functions.h  chunked_softmax_ce.cpp  chunked_softmax_ce.h  logger.h  memory_first_attention.cpp  memory_first_attention.h  memory_first_mlp.cpp  memory_first_mlp.h  memory_manager.cpp  memory_manager.h  mobile_safe_matmul.cpp  mobile_safe_matmul.h  ops.cpp  ops.h  step_arena.cpp  step_arena.h  tensor.cpp  tensor.h  tokenizer.cpp  utils.h
On-Device_Finetune/operators/functional/: functional.h
On-Device_Finetune/operators/include/: config.h  memory.h  nn.h  operators.h  transformer.h
On-Device_Finetune/operators/memory/: CMakeLists.txt  activation_checkpointer.cpp  activation_checkpointer.h  mobile_activation_manager.cpp  mobile_activation_manager.h  mobile_param_manager.cpp  mobile_param_manager.h  mobile_param_optimizations.cpp  mobile_param_optimizations.h  mobile_specific_optimizations.cpp  mobile_specific_optimizations.h  mobile_zero.cpp  mobile_zero.h  simple_tensor_stub.cpp
On-Device_Finetune/operators/models/: gpt2.h
On-Device_Finetune/operators/nn/: attention.cpp  embedding.cpp  embedding.h  layers.h  lora.cpp  lora.h  lora_ops.cpp  mlp.cpp
On-Device_Finetune/operators/optim/: CMakeLists.txt  adam.cpp  adam.h  adam_amp.cpp  adam_amp.h  comprehensive_optimizer_test  comprehensive_optimizer_test.cpp  lora_optimizer.cpp  mobile_optimizer_advanced.cpp  mobile_optimizer_advanced.h  mobile_optimizer_extensions.cpp  mobile_optimizer_extensions.h  mobile_optimizer_state_manager.cpp  mobile_optimizer_state_manager.h  optimizer.h  optimizer_utils.h  param_manager_lite.h
On-Device_Finetune/operators/scripts/: build_operators.sh  verify_integration.sh
On-Device_Finetune/operators/tests/: test_adam.cpp  test_enhanced.cpp  test_fusion.cpp  test_gpt2_lora_integration.cpp
On-Device_Finetune/operators/tools/: log_viewer.py
On-Device_Finetune/operators/transformer/: autoregressive_ops.cpp  gpt2_components.cpp  gpt2_components.h  gpt2_finetune_model.h  kv_cache.cpp  kv_cache.h  transformer_block.cpp  transformer_block.h
On-Device_Finetune/operators/utils/: grad_scaler.h  memory_ledger.h  mobile_memory_tracker.cpp
docs/: GRAD_ACCUM_CPU_CPP.md  README.md
docs/archive/: BLAS_USAGE.md  B_STAGE_STATUS.md  FINAL_REPORT.md  FINAL_TODO.md  IMPLEMENTATION_SUMMARY.md  LORA_INTEGRATION_GUIDE.md  PROGRESS.md  SESSION_HANDOVER.md  STATUS_REPORT.md
gpt2_lora_finetune/: README.md  eval_mmlu.cpp  eval_ppl.cpp  main.cpp  main.cpp.backup  quick_eval_lora.cpp  quick_eval_ppl.cpp
gpt2_lora_finetune/mmlu/: mmlu_runner.cpp  mmlu_runner.h
operators/: CMakeLists.txt  test_bpe
operators/finetune_ops/core/: autograd_engine.cpp  backward_functions.cpp  lm_loss.cpp  lm_loss.h  memory_efficient_attention.cpp  memory_efficient_attention.h  memory_manager.cpp  ops.cpp  ops.h  performance_monitor.cpp  performance_monitor.h  tensor.cpp  tensor.h  test_lm_loss.cpp  test_tokenizer_bpe.cpp  test_tokenizer_gemma.cpp  tokenizer_bpe.cpp  tokenizer_bpe.h
operators/finetune_ops/data/: test_wikitext2_dataset.cpp  wikitext2_dataset.cpp  wikitext2_dataset.h
operators/finetune_ops/graph/: gemma_lora_injector.cpp  gemma_lora_injector.h  gemma_model.cpp  gemma_model.h  gpt2_model.cpp  gpt2_model.h  lora_injector.cpp  lora_injector.h  lora_saver.cpp  lora_saver.h  safetensors_loader.cpp  safetensors_loader.h  save_pt_gold.py  test_attention_matmul.cpp  test_debug_layer0.cpp  test_gpt2_forward.cpp  test_lora_correctness.cpp  test_lora_roundtrip.cpp  test_matmul_debug.cpp  test_safetensors_loader.cpp  test_safetensors_simple.cpp
operators/finetune_ops/legacy/: README.md
operators/finetune_ops/nn/: embedding.h  lora_linear.cpp  lora_linear.h  test_lora_linear.cpp
operators/finetune_ops/optim/: adam.cpp  gemma_trainer.cpp  gemma_trainer.h  test_10step_convergence.cpp  test_10step_train.cpp  test_backward_sanity.cpp  test_baseline_10step.cpp  test_ce_grad.cpp  test_fixed_batch_compare.cpp  test_lora_grad.cpp  test_optimizer_pipeline.cpp  test_simple_grad.cpp  test_train_minimal.cpp  train_lora_gemma.cpp  train_lora_gpt2.cpp  trainer.cpp  trainer.h
operators/finetune_ops/transformer/: LEGACY_README.md
pytorch_alignment/: README.md  gpt2_full_finetune.py  gpt2_lora_finetune.py  qwen_lora_finetune.py
qwen_lora_finetune/: CMakeLists.txt  build.sh  run_mmlu.sh  run_wikitext.sh
qwen_lora_finetune/src/: mmlu_main.cpp  wikitext_main.cpp
scripts/: README.md  align_gemma_lora_pt.py  align_gemma_lora_pt_seq.py  gpt2_pt_first_batch.py  plot_train200_results.py  pt_dump_full_grads.py  pt_dump_lora_grads.py  residual_ln_microtest.py  single_layer_forward_check.py
scripts/Finetune/: run_all_alignment.sh  run_pytorch_alignment.sh  run_qwen_lora_pt.sh
